creating counters on click

--- a/src/index.html
+++ b/src/index.html
@@ -12,86 +12,86 @@
         <h1 class="game__title">Connect 4</h1>
         <p>Place 4 matching counters in a row to win</p>
         <div class="game__hover-section">
-            <div class="game__hover-section--square hover"></div>
-            <div class="game__hover-section--square hover"></div>
-            <div class="game__hover-section--square hover"></div>
-            <div class="game__hover-section--square hover"></div>
-            <div class="game__hover-section--square hover"></div>
-            <div class="game__hover-section--square hover"></div>
-            <div class="game__hover-section--square hover"></div>
+            <div class="game__hover-section--square hover" data-target=".square--1"></div>
+            <div class="game__hover-section--square hover" data-target=".square--2"></div>
+            <div class="game__hover-section--square hover" data-target=".square--3"></div>
+            <div class="game__hover-section--square hover" data-target=".square--4"></div>
+            <div class="game__hover-section--square hover" data-target=".square--5"></div>
+            <div class="game__hover-section--square hover" data-target=".square--6"></div>
+            <div class="game__hover-section--square hover" data-target=".square--7"></div>
         </div>
         <div class="game__container">
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0"></div>
+                <div class="game__container--square square--2" data-value="0"></div>
+                <div class="game__container--square square--3" data-value="0"></div>
+                <div class="game__container--square square--4" data-value="0"></div>
+                <div class="game__container--square square--5" data-value="0"></div>
+                <div class="game__container--square square--6" data-value="0"></div>
+                <div class="game__container--square square--7" data-value="0"></div>
             </div>
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0"></div>
+                <div class="game__container--square square--2" data-value="0"></div>
+                <div class="game__container--square square--3" data-value="0"></div>
+                <div class="game__container--square square--4" data-value="0"></div>
+                <div class="game__container--square square--5" data-value="0"></div>
+                <div class="game__container--square square--6" data-value="0"></div>
+                <div class="game__container--square square--7" data-value="0"></div>
             </div>
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0"></div>
+                <div class="game__container--square square--2" data-value="0"></div>
+                <div class="game__container--square square--3" data-value="0"></div>
+                <div class="game__container--square square--4" data-value="0"></div>
+                <div class="game__container--square square--5" data-value="0"></div>
+                <div class="game__container--square square--6" data-value="0"></div>
+                <div class="game__container--square square--7" data-value="0"></div>
             </div>
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0"></div>
+                <div class="game__container--square square--2" data-value="0"></div>
+                <div class="game__container--square square--3" data-value="0"></div>
+                <div class="game__container--square square--4" data-value="0"></div>
+                <div class="game__container--square square--5" data-value="0"></div>
+                <div class="game__container--square square--6" data-value="0"></div>
+                <div class="game__container--square square--7" data-value="0"></div>
             </div>
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0"></div>
+                <div class="game__container--square square--2" data-value="0"></div>
+                <div class="game__container--square square--3" data-value="0"></div>
+                <div class="game__container--square square--4" data-value="0"></div>
+                <div class="game__container--square square--5" data-value="0"></div>
+                <div class="game__container--square square--6" data-value="0"></div>
+                <div class="game__container--square square--7" data-value="0"></div>
             </div>
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0"></div>
+                <div class="game__container--square square--2" data-value="0"></div>
+                <div class="game__container--square square--3" data-value="0"></div>
+                <div class="game__container--square square--4" data-value="0"></div>
+                <div class="game__container--square square--5" data-value="0"></div>
+                <div class="game__container--square square--6" data-value="0"></div>
+                <div class="game__container--square square--7" data-value="0"></div>
             </div>
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0"></div>
+                <div class="game__container--square square--2" data-value="0"></div>
+                <div class="game__container--square square--3" data-value="0"></div>
+                <div class="game__container--square square--4" data-value="0"></div>
+                <div class="game__container--square square--5" data-value="0"></div>
+                <div class="game__container--square square--6" data-value="0"></div>
+                <div class="game__container--square square--7" data-value="0"></div>
             </div>
             <div class="game__container--row">
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
-                <div class="game__container--square"></div>
+                <div class="game__container--square square--1" data-value="0" data-num="0"></div>
+                <div class="game__container--square square--2" data-value="0" data-num="1"></div>
+                <div class="game__container--square square--3" data-value="0" data-num="2"></div>
+                <div class="game__container--square square--4" data-value="0" data-num="3"></div>
+                <div class="game__container--square square--5" data-value="0" data-num="4"></div>
+                <div class="game__container--square square--6" data-value="0" data-num="5"></div>
+                <div class="game__container--square square--7" data-value="0" data-num="6"></div>
             </div>
         </div>
     </section>
