further changes to fix repeated counters

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <div class="game__hover-section--square hover" data-target=".square--7"></div>
         </div>
         <div class="game__container">
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-8">
                 <div class="game__container--square square--1" data-value="0"></div>
                 <div class="game__container--square square--2" data-value="0"></div>
                 <div class="game__container--square square--3" data-value="0"></div>
@@ -30,7 +30,7 @@
                 <div class="game__container--square square--6" data-value="0"></div>
                 <div class="game__container--square square--7" data-value="0"></div>
             </div>
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-7">
                 <div class="game__container--square square--1" data-value="0"></div>
                 <div class="game__container--square square--2" data-value="0"></div>
                 <div class="game__container--square square--3" data-value="0"></div>
@@ -39,7 +39,7 @@
                 <div class="game__container--square square--6" data-value="0"></div>
                 <div class="game__container--square square--7" data-value="0"></div>
             </div>
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-6">
                 <div class="game__container--square square--1" data-value="0"></div>
                 <div class="game__container--square square--2" data-value="0"></div>
                 <div class="game__container--square square--3" data-value="0"></div>
@@ -48,7 +48,7 @@
                 <div class="game__container--square square--6" data-value="0"></div>
                 <div class="game__container--square square--7" data-value="0"></div>
             </div>
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-5">
                 <div class="game__container--square square--1" data-value="0"></div>
                 <div class="game__container--square square--2" data-value="0"></div>
                 <div class="game__container--square square--3" data-value="0"></div>
@@ -57,7 +57,7 @@
                 <div class="game__container--square square--6" data-value="0"></div>
                 <div class="game__container--square square--7" data-value="0"></div>
             </div>
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-4">
                 <div class="game__container--square square--1" data-value="0"></div>
                 <div class="game__container--square square--2" data-value="0"></div>
                 <div class="game__container--square square--3" data-value="0"></div>
@@ -66,7 +66,7 @@
                 <div class="game__container--square square--6" data-value="0"></div>
                 <div class="game__container--square square--7" data-value="0"></div>
             </div>
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-3">
                 <div class="game__container--square square--1" data-value="0"></div>
                 <div class="game__container--square square--2" data-value="0"></div>
                 <div class="game__container--square square--3" data-value="0"></div>
@@ -75,7 +75,7 @@
                 <div class="game__container--square square--6" data-value="0"></div>
                 <div class="game__container--square square--7" data-value="0"></div>
             </div>
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-2">
                 <div class="game__container--square square--1" data-value="0"></div>
                 <div class="game__container--square square--2" data-value="0"></div>
                 <div class="game__container--square square--3" data-value="0"></div>
@@ -84,7 +84,7 @@
                 <div class="game__container--square square--6" data-value="0"></div>
                 <div class="game__container--square square--7" data-value="0"></div>
             </div>
-            <div class="game__container--row">
+            <div class="game__container--row" id="row-1">
                 <div class="game__container--square square--1" data-value="0" data-num="0"></div>
                 <div class="game__container--square square--2" data-value="0" data-num="1"></div>
                 <div class="game__container--square square--3" data-value="0" data-num="2"></div>
